[project]
name = "comfyui-kms"
description = "See what your seeds have in mind before you spend the steps: quick previews right on the node - click your favourite and only that image gets rendered. Exact continuation, no wasted steps, works with any model."
version = "0.4.0"
license = { text = "MIT" }
dependencies = []

[project.urls]
Repository = "https://github.com/shootthesound/ComfyUI-KMS"

[tool.comfy]
PublisherId = "shootthesound"
DisplayName = "KSampler Multi-Choice"
